--- a/css/fonts.css
+++ b/css/fonts.css
@@ -14,40 +14,24 @@
     font-style: normal;
 }
 
-
-
 @font-face {
-	
     font-family: 'OpenSans';
-
-    src: url('OpenSans.eot');
-
-    src: url('OpenSans.eot?#iefix') format('embedded-opentype'),
-
-    	 url('OpenSans.woff2') format('woff2'),
-
-    	 url('OpenSans.woff') format('woff'),
-
-    	 url('OpenSans.ttf') format('truetype');
-	
+    src: url('../fonts/OpenSans.eot');
+    src: url('../fonts/OpenSans.eot?#iefix') format('embedded-opentype'),
+    	 url('../fonts/OpenSans.woff2') format('woff2'),
+    	 url('../fonts/OpenSans.woff') format('woff'),
+    	 url('../fonts/OpenSans.ttf') format('truetype');
     font-weight: normal;
-
     font-style: normal;
 }
 
-
 @font-face {
     font-family: 'FeltTipWoman';
-    src: url('FeltTipWoman.eot');
-	
-    src: url('FeltTipWoman.eot?#iefix') format('embedded-opentype'),
-
-	 url('FeltTipWoman.woff2') format('woff2'),
-
-	 url('FeltTipWoman.woff') format('woff'),
-
-         url('FeltTipWoman.ttf') format('truetype');
-	
+    src: url('../fonts/FeltTipWoman.eot');
+    src: url('../fonts/FeltTipWoman.eot?#iefix') format('embedded-opentype'),
+	     url('../fonts/FeltTipWoman.woff2') format('woff2'),
+	     url('../fonts/FeltTipWoman.woff') format('woff'),
+         url('../fonts/FeltTipWoman.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
