--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 
 a {
 	text-decoration: none;
+	text-align: center;
 }
 
 ul {
@@ -74,7 +75,7 @@ p {
 }
 
 .first-section__author {
-	font-size: 18px;
+	font-size: 36px;
 }
 
 /*HEADER*/
@@ -247,7 +248,6 @@ p {
 
 @media (min-width: 992px) and (max-width: 1199px) {
 	.gallery__link {
-		width: auto;
 		padding: 0;
 	}
 }
